--- a/newthingtest.html
+++ b/newthingtest.html
@@ -8,8 +8,10 @@
 <link href="newthingsheet.css" rel="stylesheet" type="text/css">
 
 <script src="jquery-1.11.3.js" type="text/javascript"></script>
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="bresize.js"></script>
 <script type="text/javascript" src="newthingscript.js"></script>
+<script type="text/javascript" src="script.js"></script>
+
 
 <link rel="shortcut icon" href="favicon.ico" />
 <title>I KneeData | For your frame data kneeds</title>
@@ -33,12 +35,7 @@
 <div id="main">
 <div id="main-content">
 <div id="timelinebigcontainer">
-<div id="tline"></div>
-<div id="timelinescontainer">
-	<div class="timeline" id="tl1"><div class="tkey" style="background-image:url(assets/buttons/stickdown.png)"></div><div class="tframe"></div><div class="tframe"></div><div class="tframe"></div><div class="tframe"></div></div>
-<div class="timeline" id="tl2"><div class="tkey" style="background-image:url(assets/buttons/b.png)"></div><div class="tframe"></div><div class="tframe"></div><div class="tframe"></div><div class="tframe"></div></div>
-<div class="timeline" id="tl3"><div class="tkey" style="background-image:url(assets/buttons/xy.png)"></div><div class="tframe"></div><div class="tframe"></div><div class="tframe"></div><div class="tframe"></div></div>
-</div>
+
 </div>
 
 
