--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <script src="jquery-1.11.3.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="bresize.js"></script>
 <script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="graphsgfysscript.js"></script>
 <link rel="shortcut icon" href="favicon.ico" />
 <title>I KneeData | For your frame data kneeds</title>
 </head>
@@ -40,11 +41,74 @@
 <h1>Blog</h1></div>
 <div id="main">
 <div id="main-content">
-<div id="blogcontainer">
+<div class="blogcontainer">
+<h2><img src="assets/pencilicon.png" width="40" height="40" alt=""/> 02/08/15 | Doc+Mario Extended Up-B</h2>
+
+
+  <div class="blog">
+  <p>So today I found out about doc and marios extended upb, which I have never seen mentioned before or found myself. First let me start by saying this isn't horizontal angling, but rather gaining more vertical height then a no angle/upward angle up-b, and also a lot less horizontal distance. Heres a gfy comparing the difference.</p>
+
+  <p>This is doing the Up-B at the closest horizontal position possible, and the lowest vertical position possible.</p>
+  <div id="bloggfycontainer" style="width:700px; height:376px;" class="media-flex"><img class="gfyitem" data-id="DampAlarmedAustraliancurlew" /></div>
+
+  <img src="assets/blog/extendedupbdifference.png"/><br>
+
+  <p><span class="semititle">Why and How?</span></p>
+  <p>Certain up-bs can be angled and reversed, the marios, marth and roy are the best examples. Each one has a frame in which the angle is decided by reading your control stick, and another frame where the direction (reverse or not) is decided.</p>
+
+  <p>Doc decides his angle on frame 3, and his direction on frame 4. So if he inputs back on frame 3, but then moves the stick anywhere but back on frame 4, he will angle away but up-b forward. This results in the extended up-b. Mario is the same concept, except he decides his angle on frame 6, and direction on frame 7. So the input is slightly delayed.</p>
+  <p>The amount you extend the Up-B is dependent on how far horizontal your stick is on the angle deciding frame. Where the back notch will result in the most extension.</p><br>
+  <img src="assets/blog/extendedupbangle.png"/><br>
+  <p>There are many ways you could perform these inputs, but I think the easiest way is to hit Up+B > Quarter Circle Back > Release to Neutral really fast.</p><br>
+  <img src="assets/blog/extendedupbinputs.gif"/><br>
+  <p>Numbers for X and Y distances</p>
+  <div class="spoilerbutton"><p>Show</p></div>
+  <div class="spoilercontent">
+    <p>all numbers are at peak<br>
+    Mario<br>
+    Grounded<br><br>
+
+    Extended - peak on frame 26<br>
+    X-distance - 5.38<br>
+    Y-distance - 43.96<br><br>
+
+    Upward angled - peak on frame 24<br>
+    X-distance - 17.55<br>
+    Y-distance - 40.41<br><br>
+
+    Airbourne<br><br>
+
+    Extended - peak on frame 26<br>
+    X-distance - 5.15<br>
+    Y-distance - 33.66<br><br>
+
+    Upward angled - peak on frame 24<br>
+    X-distance - 16.72<br>
+    Y-distance - 30.29<br><br>
+
+    Doc<br>
+    Airbourne<br><br>
+
+    Extended - peak on frame 26<br>
+    X-distance - 5.11<br>
+    Y-distance - 38.74<br><br>
+
+    Upward angled - peak on 24<br>
+    X-distance - 16.68<br>
+    Y-distance - 35.39</p>
+  </div>
+
+  <p>In terms of application, the difference in vertical height is small, but it's there so obviously being able to recover slightly higher will save your life occasionally. The difference in horizontal distance is pretty good, it'll help recovering on battlefield, will stop you getting pineappled on dreamland and will make it easier to get onto randall</p>
+
+  <p>- Schmoo <img src="assets/docicon.png" width="21" height="24" alt=""/></p>
+  </div>
+
+  </div>
+<div class="blogcontainer">
 <h2><img src="assets/pencilicon.png" width="40" height="40" alt=""/> 23/07/15 | Welcome to IKD!</h2>
 
 
-<div id="blog">
+<div class="blog">
 <p>Hey everyone, welcome to my new site I KneeData. This site aims to bring you interactive and unique learning tools to help visualise and better understand certain aspects of competitive smash.</p>
 
 <p>I have launched with top 8 melee characters outofshield heatmaps, but plan to release the entire cast. Then create new types of heatmaps, such as from shielddrop, from dash, from ledge. Now that the foundation has been created, the process of making new ones is very easy but a little time consuming.</p>
