--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </div>
 <div id="pagetitle" style="background-color:#AC2629">
 <h1>Blog</h1></div>
-<div id="main">
+<div id="main" style="width:1px">
 <div id="main-content">
 <div class="blogcontainer">
 <h2><img src="assets/pencilicon.png" width="40" height="40" alt=""/> 02/08/15 | Doc+Mario Extended Up-B</h2>
