--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <p>This is doing the Up-B at the closest horizontal position possible, and the lowest vertical position possible.</p>
   <div id="bloggfycontainer" style="width:700px; height:376px;" class="media-flex"><img class="gfyitem" data-id="DampAlarmedAustraliancurlew" /></div>
 
-  <img src="assets/blog/extendedupbdifference.png"/><br>
+  <img id="docupb" src="assets/blog/extendedupbdifference.png"/><br>
 
   <p><span class="semititle">Why and How?</span></p>
   <p>Certain up-bs can be angled and reversed, the marios, marth and roy are the best examples. Each one has a frame in which the angle is decided by reading your control stick, and another frame where the direction (reverse or not) is decided.</p>
