--- a/vidsthreads.html
+++ b/vidsthreads.html
@@ -82,9 +82,9 @@
 <div class="ig">
 
 <div class="graphcontainer"  id="vid3">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/XmlM3qkdva4?rel=0" frameborder="0" allowfullscreen></iframe></div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Eo2Lbs-KLRc?rel=0" frameborder="0" allowfullscreen></iframe>
 <div class="ig-text">
-<p><b>SSBM Tutorials | "Marth Killer" Tutorial</b> by <span class="author">Kira</span><a href="https://twitter.com/ssbm_kira"><img src="assets/twittericon.png" class="authoricon"></a> and <span class="author">Kellen</span><a href="https://twitter.com/kellen_ho"><img src="assets/twittericon.png" class="authoricon"></a></p>
+<p><b>SSBM Tutorials | Wall Tech Tutorial</b> by <span class="author">Kira</span><a href="https://twitter.com/ssbm_kira"><img src="assets/twittericon.png" class="authoricon"></a> and <span class="author">Kellen</span><a href="https://twitter.com/kellen_ho"><img src="assets/twittericon.png" class="authoricon"></a></p>
 <p>The latest video of the SSBM Tutorials Youtube series. Kira and Kellen produce high quality tutorials for various techniques, ranging from moonwalks to full on neutral games. Kira is a top player with a tremendous amount of knowledge, and Kellen makes sure his ideas are understood in the video.</p>
 
 <a href="https://www.youtube.com/channel/UC46ZTid4t2ctB6osM0WTiJA"><div class="fullsize">YT Channel</div></a>
