--- a/timelinecreate.html
+++ b/timelinecreate.html
@@ -8,6 +8,7 @@
 <link href="newthingsheet.css" rel="stylesheet" type="text/css">
 
 <script src="jquery-1.11.3.js" type="text/javascript"></script>
+<script src="jquery-ui.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="bresize.js"></script>
 <script type="text/javascript" src="newthingscript.js"></script>
 <script type="text/javascript" src="script.js"></script>
