--- a/timelinecreate.html
+++ b/timelinecreate.html
@@ -9,7 +9,7 @@
 
 <script src="jquery-1.11.3.js" type="text/javascript"></script>
 <script src="jquery-ui.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="bresize.js"></script>
+<script type="text/javascript" src="tresize.js"></script>
 <script type="text/javascript" src="newthingscript.js"></script>
 <script type="text/javascript" src="script.js"></script>
 
@@ -51,8 +51,8 @@
 	<option value="0" selected>-</option>
 	</select>
 	</form>
-	<form id="drop3">Name <input type="text" name="timelinename" maxlength="30" id="namedrop" style="width:100px;"/></form>
-	<form id="drop4">No. of Buttons
+	<form id="drop3">Title <input type="text" name="timelinename" maxlength="30" id="namedrop" style="width:100px;"/></form>
+	<form id="drop4">Buttons
 	<select name="dropdown" id="buttonsdrop">
 	<option value="0" selected>-</option>
 	<option value="1">1</option>
@@ -65,9 +65,13 @@
 	<option value="8">8</option>
 	<option value="9">9</option>
 	<option value="10">10</option>
+	<option value="11">11</option>
+	<option value="12">12</option>
+	<option value="13">13</option>
+	<option value="14">14</option>
 	</select>
 	</form>
-	<form id="drop5">No. of Frames
+	<form id="drop5">Frames
 	<select name="dropdown" id="framesdrop">
 	<option value="0" selected>-</option>
 	<option value="1">1</option>
@@ -85,6 +89,21 @@
 	<option value="13">13</option>
 	<option value="14">14</option>
 	<option value="15">15</option>
+	<option value="16">16</option>
+	<option value="17">17</option>
+	<option value="18">18</option>
+	<option value="19">19</option>
+	<option value="20">20</option>
+	<option value="21">21</option>
+	<option value="22">22</option>
+	<option value="23">23</option>
+	<option value="24">24</option>
+	<option value="25">25</option>
+	<option value="26">26</option>
+	<option value="27">27</option>
+	<option value="28">28</option>
+	<option value="29">29</option>
+	<option value="30">30</option>
 	</select>
 	</form>
 	<div id="createbutton" class="editbutton"><p>Create</p></div>
