--- a/heatmaps/oos/falcon2.html
+++ b/heatmaps/oos/falcon2.html
@@ -25,6 +25,84 @@
 </head>
 
 <body>
+  <div id="header">
+  	<a href="http://ikneedata.com"><img id="logo" src="assets/kneesmalllogo.png" width="40" height="40" alt=""/></a>
+      <a href="http://ikneedata.com"><img id="titlelogo" src="assets/ikneedatav5.png"/ width="280" height="60"></a>
+  	<a href="http://ikneedata.com"><div class="button"><h4>Blog</h4></div></a>
+  	<a href="heatmaps/oos/falcon.html"><div class="button"><h4>Heatmaps</h4></div></a>
+      <a href="graphsgfys.html"><div class="button longbutton"><h4>Graphs & Gfys</h4></div></a>
+      <a href="vidsthreads.html"><div class="button longbutton"><h4>Vids & Threads</h4></div></a>
+  	<a href="donate.html"><div class="button"><h4>Donate</h4></div></a>
+  	<a href="about.html"><div class="button"><h4>About</h4></div></a>
+  	<div id="socialmediaicons"><a href="http://twitter.com/IKneeData"><div class="socialmedia" style="background-image:url(assets/twitterlogo.png)"></div></a>
+  	<a href="http://facebook.com/IKneeData"><div class="socialmedia" style="background-image:url(assets/facebooklogo.png)"></div></a></div>
+  </div>
+  <div id="pagetitle" style="background-color:#5F369F">
+  <h1>Heatmaps <img id="heatmapinfo" src="assets/question.png" style="height:22px; width:22px; border-radius:15px;"/></h1>
+
+  <div id="heatmapinfobox"><p>Heatmaps display the speed of all the character's attacks from a certain position. The coloured shapes represent the possible hitboxes of each attack, where the colour represents the frame that it comes out. All smash games run at 60 frames per second. Red and yellow hitboxes are very fast, but green and blue are slower.</p>
+  	<p>You can toggle each attack, or each frame (colour) individually, to allow you to see only the options you want. You can also play an animation of your selected hitboxes in real game speed (60fps) to get a feel for how fast each option is.</p>
+  	<p>Using the hurtbox controls, you can move around a custom opponent hurtbox to greater visualise hitbox range.</p>
+  	<p>Hovering over the buttons will highlight (darkens them) the button's respective hitboxes.</p>
+  </div></div><div id="main">
+  <div id="main-content">
+  	<div id="control-container">
+      <div id="top-controls">
+      	<div class="noa control nohelp" id="heatmaptype"><p>OoS</p>
+          <div id="hmtypedropdown" class="dropdown" style="display:none"><div class="noa control hmtype nohelp">Coming Soon</div></div></div>
+  		<div class="noa control nohelp" id="characterbutton"><p>
+  Falcon</p>
+  <div id="chardropdown" class"dropdown" style="display:none">
+  	<a href="heatmaps/oos/fox.html"><div class="noa control character nohelp"><p>Fox</p></div></a>
+  	<a href="heatmaps/oos/falco.html"><div class="noa control character nohelp"><p>Falco</p></div></a>
+  	<a href="heatmaps/oos/marth.html"><div class="noa control character nohelp"><p>Marth</p></div></a>
+  	<a href="heatmaps/oos/sheik.html"><div class="noa control character nohelp"><p>Sheik</p></div></a>
+  	<a href="heatmaps/oos/puff.html"><div class="noa control character nohelp"><p>Puff</p></div></a>
+  	<a href="heatmaps/oos/peach.html"><div class="noa control character nohelp"><p>Peach</p></div></a>
+  	<a href="heatmaps/oos/ics.html"><div class="noa control character nohelp"><p>ICs</p></div></a>
+  	<a href="heatmaps/oos/falcon.html"><div class="noa control character nohelp"><p>Falcon</p></div></a>
+  </div>
+
+  </div>
+  		<div class="attackall nohelp"><div id="allattcontainer"><div id="allattackon2" class="allatt noa control">All On</div><div id="allattackoff2" class="allatt noa control">All Off</div></div><div class="framecircle" id="fc0"><p>F</p></div></div>
+  		<div id="attack1" class="attack control"><p>Grab</p><div class="framecircle" id="fc1"><p>F</p></div></div>
+  		<div id="attack2" class="attack control"><p>Upair</p><div class="framecircle" id="fc2"><p>F</p></div></div>
+  		<div id="attack3" class="attack control"><p>Nair</p><div class="framecircle" id="fc3"><p>F</p></div></div>
+          <div id="attack4" class="attack control"><p>Bair</p><div class="framecircle" id="fc4"><p>F</p></div></div>
+  		<div id="attack5" class="attack control"><p>Up-b</p><div class="framecircle" id="fc5"><p>F</p></div></div>
+          <div id="attack6" class="attack control"><p>Knee</p><div class="framecircle" id="fc6"><p>F</p></div></div>
+          <div id="attack7" class="attack control"><p>Dair</p><div class="framecircle" id="fc7"><p>F</p></div></div>
+  				<div id="hurtboxcontrol">Hurtbox control
+  					<div id="hurtchar" class="noa control hurtboxchar nohelp"><p id="hurtcurrent">Falcon</p><div id="hurtchardropdown">
+  						<div class="noa control hurtboxchar hbcharselect nohelp"><p>Fox</p></div>
+  						<div class="noa control hurtboxchar hbcharselect nohelp"><p>Falco</p></div>
+  						<div class="noa control hurtboxchar hbcharselect nohelp"><p>Marth</p></div>
+  						<div class="noa control hurtboxchar hbcharselect nohelp"><p>Sheik</p></div>
+  						<div class="noa control hurtboxchar hbcharselect nohelp"><p>Puff</p></div>
+  						<div class="noa control hurtboxchar hbcharselect nohelp"><p>Peach</p></div>
+  						<div class="noa control hurtboxchar hbcharselect nohelp"><p>ICs</p></div>
+  						<div class="noa control hurtboxchar hbcharselect nohelp"><p>Falcon</p></div>
+  						</div></div>
+  						<div id="position" class="hurtboxcontrols noa control">crouch</div><div id="flip" class="hurtboxcontrols noa control"><p>flip</p></div>
+  					<div id="hbleft" class="hurtboxcontrols noa control"></div><div id="hbright" class="hurtboxcontrols noa control"></div></div>
+  				<a href="http://imgur.com/a/9SqqU"><div id="img-button" class="noa control"><p>
+  Image Version</p></div></a>
+  				<div id="hbhlbutton" class="noa control"><p>
+  Turn highlight <span id="hbhlonoff">Off</span></p></div>
+
+  		<div id="control-speed">
+  		<div id="play-button" class="noa control play"></div>
+
+  		<div id="times1" class="speed"><p>
+  x1</p></div>
+  		<div id="times05" class="speed"><p>
+  1/2</p></div>
+  		<div id="times025" class="speed"><p>
+  1/4</p></div>
+  </div></div>
+  		</div>
+
+
   <div id="imgandframecontainer">
 	<div id="img-container">
 		<img id="base" src="assets/heatmaps/falcon/base.png"/>
@@ -192,5 +270,29 @@
         </div><div id="frame3" class="framecontrol"><p>3</p></div><div id="frame4" class="framecontrol"><p>4</p></div><div id="frame5" class="framecontrol"><p>5</p></div><div id="frame6" class="framecontrol"><p class="test">6</p></div><div id="frame7" class="framecontrol"><p>7</p></div><div id="frame8" class="framecontrol"><p>8</p></div><div id="frame9" class="framecontrol"><p>9</p></div><div id="frame10" class="framecontrol"><p>10</p></div><div id="frame11" class="framecontrol"><p>11</p></div><div id="frame12" class="framecontrol"><p>12</p></div><div id="frame13" class="framecontrol"><p>13</p></div><div id="frame14" class="framecontrol"><p>14</p></div><div id="frame15" class="framecontrol"><p>15</p></div><div id="frame16" class="framecontrol"><p>16</p></div><div id="frame17" class="framecontrol"><p>17</p></div><div id="frame18" class="framecontrol"><p>18</p></div><div id="frame19" class="framecontrol"><p>19</p></div><div id="frame20" class="framecontrol"><p>20</p></div>
     </div>
     </div>
+  </div>
+
+<div id="side-container">
+<div id="ad"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- ikneedatabanner -->
+<ins class="adsbygoogle"
+   style="display:inline-block;width:300px;height:600px"
+   data-ad-client="ca-pub-2776548052186122"
+   data-ad-slot="7967934690"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>
+  <h2>Suggestions</h2>
+  <div id="sugboxcontainer"><div id="suggestiontext"><p>Have a suggestion of what
+  features to create next?
+  Send a message via</p></div>
+<a href="http://www.reddit.com/message/compose/?to=schmooblidon">
+<div class="sugbtn"><img src="assets/redditicon.png" width="50" height="40" alt=""/><p>Reddit</p></div></a>
+<a href="http://www.twitch.tv/message/compose?to=schmooblidon">
+<div class="sugbtn"><img src="assets/twitchicon.png" width="50" height="40" alt=""/><p>Twitch</p></div></a>
+</div>
+</div>
+
+</div>
 </body>
 </html>
