--- a/heatmaps/oos/peach.html
+++ b/heatmaps/oos/peach.html
@@ -26,8 +26,8 @@
 
 <body>
 <div id="header">
-	<a href="http://ikneedata.com"><img id="logo" src="assets/kneesmalllogo.png" width="40" height="40" alt=""/></a>
-    <a href="http://ikneedata.com"><img id="titlelogo" src="assets/ikneedatav5.png"/ width="280" height="60"></a>
+	<a href="http://ikneedata.com"><img id="logo" src="assets/kneesmalllogo.png" width="40" height="40" alt=""></a>
+    <a href="http://ikneedata.com"><img id="titlelogo" src="assets/ikneedatav5.png" width="280" height="60"></a>
 	<a href="http://ikneedata.com"><div class="button"><h4>Blog</h4></div></a>
 	<a href="heatmaps/oos/falcon.html"><div class="button"><h4>Heatmaps</h4></div></a>
     <a href="graphsgfys.html"><div class="button longbutton"><h4>Graphs & Gfys</h4></div></a>
@@ -53,7 +53,7 @@
         <div id="hmtypedropdown" class="dropdown" style="display:none"><div class="noa control hmtype nohelp">Coming Soon</div></div></div>
 		<div class="noa control nohelp" id="characterbutton"><p>
 Peach</p>
-<div id="chardropdown" class"dropdown" style="display:none">
+<div id="chardropdown" class="dropdown" style="display:none">
 	<a href="heatmaps/oos/fox.html"><div class="noa control character nohelp"><p>Fox</p></div></a>
 	<a href="heatmaps/oos/falco.html"><div class="noa control character nohelp"><p>Falco</p></div></a>
 	<a href="heatmaps/oos/marth.html"><div class="noa control character nohelp"><p>Marth</p></div></a>
