--- a/heatmaps/oos/falcon3.html
+++ b/heatmaps/oos/falcon3.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<base href="../../">
+<base href="">
 <link href='http://fonts.googleapis.com/css?family=Slabo+27px|Share+Tech+Mono' rel='stylesheet' type='text/css'>
-<link href="stylesheet.css" rel="stylesheet" type="text/css">
-<link href="heatmapsheet2.css" rel="stylesheet" type="text/css">
+<link href="../../stylesheet.css" rel="stylesheet" type="text/css">
+<link href="../../heatmapsheet2.css" rel="stylesheet" type="text/css">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -16,29 +16,29 @@
   ga('send', 'pageview');
 
 </script>
-<script src="jquery-1.11.3.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="hresize.js"></script>
-<script type="text/javascript" src="script.js"></script>
-<script type="text/javascript" src="heatmapscript.js"></script>
-<link rel="shortcut icon" href="favicon.ico" />
+<script src="../../jquery-1.11.3.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="../../hresize.js"></script>
+<script type="text/javascript" src="../../script.js"></script>
+<script type="text/javascript" src="../../heatmapscript.js"></script>
+<link rel="shortcut icon" href="../../favicon.ico" />
 <title>I KneeData | For your frame data kneeds</title>
 </head>
 
 <body>
   <div id="header">
-  	<a href="http://ikneedata.com"><img id="logo" src="assets/kneesmalllogo.png" width="40" height="40" alt=""></a>
-      <a href="http://ikneedata.com"><img id="titlelogo" src="assets/ikneedatav5.png" width="280" height="60"></a>
+  	<a href="http://ikneedata.com"><img id="logo" src="../../assets/kneesmalllogo.png" width="40" height="40" alt=""></a>
+      <a href="http://ikneedata.com"><img id="titlelogo" src="../../assets/ikneedatav5.png" width="280" height="60"></a>
   	<a href="http://ikneedata.com"><div class="button"><h4>Blog</h4></div></a>
-  	<a href="heatmaps/oos/falcon.html"><div class="button"><h4>Heatmaps</h4></div></a>
-      <a href="graphsgfys.html"><div class="button longbutton"><h4>Graphs & Gfys</h4></div></a>
-      <a href="vidsthreads.html"><div class="button longbutton"><h4>Vids & Threads</h4></div></a>
-  	<a href="donate.html"><div class="button"><h4>Donate</h4></div></a>
-  	<a href="about.html"><div class="button"><h4>About</h4></div></a>
-  	<div id="socialmediaicons"><a href="http://twitter.com/IKneeData"><div class="socialmedia" style="background-image:url(assets/twitterlogo.png)"></div></a>
-  	<a href="http://facebook.com/IKneeData"><div class="socialmedia" style="background-image:url(assets/facebooklogo.png)"></div></a></div>
+  	<a href="../../heatmaps/oos/falcon.html"><div class="button"><h4>Heatmaps</h4></div></a>
+      <a href="../../graphsgfys.html"><div class="button longbutton"><h4>Graphs & Gfys</h4></div></a>
+      <a href="../../vidsthreads.html"><div class="button longbutton"><h4>Vids & Threads</h4></div></a>
+  	<a href="../../donate.html"><div class="button"><h4>Donate</h4></div></a>
+  	<a href="../../about.html"><div class="button"><h4>About</h4></div></a>
+  	<div id="socialmediaicons"><a href="http://twitter.com/IKneeData"><div class="socialmedia" style="background-image:url(../../assets/twitterlogo.png)"></div></a>
+  	<a href="../../http://facebook.com/IKneeData"><div class="socialmedia" style="background-image:url(../../assets/facebooklogo.png)"></div></a></div>
   </div>
   <div id="pagetitle" style="background-color:#5F369F">
-  <h1>Heatmaps <img id="heatmapinfo" src="assets/question.png" style="height:22px; width:22px; border-radius:15px;"/></h1>
+  <h1>Heatmaps <img id="heatmapinfo" src="../../assets/question.png" style="height:22px; width:22px; border-radius:15px;"/></h1>
 
   <div id="heatmapinfobox"><p>Heatmaps display the speed of all the character's attacks from a certain position. The coloured shapes represent the possible hitboxes of each attack, where the colour represents the frame that it comes out. All smash games run at 60 frames per second. Red and yellow hitboxes are very fast, but green and blue are slower.</p>
   	<p>You can toggle each attack, or each frame (colour) individually, to allow you to see only the options you want. You can also play an animation of your selected hitboxes in real game speed (60fps) to get a feel for how fast each option is.</p>
@@ -53,14 +53,14 @@
   		<div class="noa control nohelp" id="characterbutton"><p>
   Falcon</p>
   <div id="chardropdown" class="dropdown" style="display:none">
-  	<a href="heatmaps/oos/fox.html"><div class="noa control character nohelp"><p>Fox</p></div></a>
-  	<a href="heatmaps/oos/falco.html"><div class="noa control character nohelp"><p>Falco</p></div></a>
-  	<a href="heatmaps/oos/marth.html"><div class="noa control character nohelp"><p>Marth</p></div></a>
-  	<a href="heatmaps/oos/sheik.html"><div class="noa control character nohelp"><p>Sheik</p></div></a>
-  	<a href="heatmaps/oos/puff.html"><div class="noa control character nohelp"><p>Puff</p></div></a>
-  	<a href="heatmaps/oos/peach.html"><div class="noa control character nohelp"><p>Peach</p></div></a>
-  	<a href="heatmaps/oos/ics.html"><div class="noa control character nohelp"><p>ICs</p></div></a>
-  	<a href="heatmaps/oos/falcon.html"><div class="noa control character nohelp"><p>Falcon</p></div></a>
+  	<a href="../../heatmaps/oos/fox.html"><div class="noa control character nohelp"><p>Fox</p></div></a>
+  	<a href="../../heatmaps/oos/falco.html"><div class="noa control character nohelp"><p>Falco</p></div></a>
+  	<a href="../../heatmaps/oos/marth.html"><div class="noa control character nohelp"><p>Marth</p></div></a>
+  	<a href="../../heatmaps/oos/sheik.html"><div class="noa control character nohelp"><p>Sheik</p></div></a>
+  	<a href="../../heatmaps/oos/puff.html"><div class="noa control character nohelp"><p>Puff</p></div></a>
+  	<a href="../../heatmaps/oos/peach.html"><div class="noa control character nohelp"><p>Peach</p></div></a>
+  	<a href="../../heatmaps/oos/ics.html"><div class="noa control character nohelp"><p>ICs</p></div></a>
+  	<a href="../../heatmaps/oos/falcon.html"><div class="noa control character nohelp"><p>Falcon</p></div></a>
   </div>
 
   </div>
@@ -105,89 +105,78 @@
 
   <div id="imgandframecontainer">
 	<div id="img-container">
-		<img id="base" src="assets/heatmaps/falcon/base.png"/>
-        <img id="ready" src="assets/heatmaps/ready.png"/>
-        <img id="go" src="assets/heatmaps/go.png"/>
-				<div class="a7 f20 hitbox" id="a7f20" style="clip-path:url(#dair20);-webkit-clip-path:url(#dair20)"></div>
-				<div class="a6 f20 hitbox" id="a6f20" style="clip-path:url(#knee20);-webkit-clip-path:url(#knee20)"></div>
-				<div class="a4 f20 hitbox" id="a4f20" style="clip-path:url(#bair20);-webkit-clip-path:url(#bair20)"></div>
-				<div class="a6 f19 hitbox" id="a6f19" style="clip-path:url(#knee19);-webkit-clip-path:url(#knee19)"></div>
-				<div class="a4 f19 hitbox" id="a4f19" style="clip-path:url(#bair19);-webkit-clip-path:url(#bair19)"></div>
-				<div class="a6 f18 hitbox" id="a6f18" style="clip-path:url(#knee18);-webkit-clip-path:url(#knee18)"></div>
-				<div class="a4 f18 hitbox" id="a4f18" style="clip-path:url(#bair18);-webkit-clip-path:url(#bair18)"></div>
-				<div class="a4 f17 hitbox" id="a4f17" style="clip-path:url(#bair17);-webkit-clip-path:url(#bair17)"></div>
-				<div class="a2 f17 hitbox" id="a2f17" style="clip-path:url(#upair17);-webkit-clip-path:url(#upair17)"></div>
-				<div class="a4 f16 hitbox" id="a4f16" style="clip-path:url(#bair16);-webkit-clip-path:url(#bair16)"></div>
-				<div class="a3 f16 hitbox" id="a3f16" style="clip-path:url(#nair16);-webkit-clip-path:url(#nair16)"></div>
-				<div class="a2 f16 hitbox" id="a2f16" style="clip-path:url(#upair16);-webkit-clip-path:url(#upair16)"></div>
-				<div class="a3 f15 hitbox" id="a3f15" style="clip-path:url(#nair15);-webkit-clip-path:url(#nair15)"></div>
-				<div class="a2 f15 hitbox" id="a2f15" style="clip-path:url(#upair15);-webkit-clip-path:url(#upair15)"></div>
-        <div class="a5 f14 hitbox multihit" id="a5f14">
-          <div class="in-f14 innerhit" style="clip-path:url(#upb14-1);-webkit-clip-path:url(#upb14-1)"></div>
-          <div class="in-f14 innerhit" style="clip-path:url(#upb14-2);-webkit-clip-path:url(#upb14-2)"></div>
-        </div>
-        <div class="a4 f14 hitbox" id="a4f14" style="clip-path:url(#bair14);-webkit-clip-path:url(#bair14)"></div>
-				<div class="a3 f14 hitbox" id="a3f14" style="clip-path:url(#nair14);-webkit-clip-path:url(#nair14)"></div>
-				<div class="a2 f14 hitbox" id="a2f14" style="clip-path:url(#upair14);-webkit-clip-path:url(#upair14)"></div>
-				<div class="a3 f13 hitbox" id="a3f13" style="clip-path:url(#nair13);-webkit-clip-path:url(#nair13)"></div>
-				<div class="a2 f13 hitbox" id="a2f13" style="clip-path:url(#upair13);-webkit-clip-path:url(#upair13)"></div>
-				<div class="a3 f12 hitbox" id="a3f12" style="clip-path:url(#nair12);-webkit-clip-path:url(#nair12)"></div>
-				<div class="a2 f12 hitbox" id="a2f12" style="clip-path:url(#upair12);-webkit-clip-path:url(#upair12)"></div>
-        <div class="a3 f11 hitbox" id="a3f11" style="clip-path:url(#nair11);-webkit-clip-path:url(#nair11)"></div>
-				<div class="a2 f11 hitbox" id="a2f11" style="clip-path:url(#upair11);-webkit-clip-path:url(#upair11)"></div>
-        <div class="a2 f10 hitbox" id="a2f10" style="clip-path:url(#upair10);-webkit-clip-path:url(#upair10)"></div>
-        <div class="a1 f7 hitbox" id="a1f7" style="clip-path:url(#grab7);-webkit-clip-path: url(#grab7);"></div>
-        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:ev="http://www.w3.org/2001/xml-events" x="100px" y="110px" width="1280px" height="720px"
-  	  viewBox="0 0 1280 720" enable-background="new 0 0 1280 720" xml:space="preserve">
+		<img id="base" src="../../assets/heatmaps/falcon/base.png"/>
+        <img id="ready" src="../../assets/heatmaps/ready.png"/>
+        <img id="go" src="../../assets/heatmaps/go.png"/>
+
+        <svg version="1.1" id="hitboxsvg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="1280px" height="720px"
+  	  viewBox="0 0 1280 720" enable-background="new 0 0 1280 720" xml:space="preserve" style="position:absolute">
      <clipPath id="grab7">
   <path fill-rule="evenodd" clip-rule="evenodd" fill="none" d="M670,434l21,4l11,6l12-6l22-4l19,3l19,13l10,15l5,19l-4,19l-13,17
   	l-17,11l-20,3l-21-3l-11-8l-13,8l-19,4l-18-4l-20-12l-11-16l-6-18l6-23l12-14l15-9L670,434z"/>
+
     </clipPath>
+
+
     <clipPath id="upair10">
   <path fill-rule="evenodd" clip-rule="evenodd" fill="none" d="M605,319l21-4h176l18,4l17,11h62l23,6l20,12l14,20l5,21l-5,24l-13,19
   	l-22,14l-24,5H727l-29-7l-19-10l-15-20h-42l-16-4l-18-9l-11-16l-6-20l4-19l12-16L605,319z"/>
     </clipPath>
+
+
     <clipPath id="upair11">
   <path fill-rule="evenodd" clip-rule="evenodd" fill="none" d="M550,338v-19l8-17l17-15l19-7h49l3-7l16-17l22-9l229-1l21,6l20,15
   	l13,23l1,22l-11,102l-19,22l-22,11l-26,4H714l-24-9l-19-17l-6-12l-40,1l-16-3l-15-8l-15-13l-23-37L550,338z"/>
     </clipPath>
+
+
     <clipPath id="nair11">
   <path fill-rule="evenodd" clip-rule="evenodd" fill="none" d="M490,395l4-22l12-16l21-13l23-3l25-15l27-6h211l14,3h84l19,4l19,12
   	l12,18l5,20l-5,20l-12,18l-20,13l-22,4h-41l-5,8l-27,15l-26,4H602l-25-5l-8-4h-21l-21-4l-19-12l-13-16l-5-22"/>
     </clipPath>
+
+
     <clipPath id="upair12">
   <path fill-rule="evenodd" clip-rule="evenodd" fill="none" d="M550,252l20-3h11l-3-21l10-23l15-16l27-12h253l24,5l21,16l9,15l28,72
   	l2,20l-3,21l-18,22l-20,11l-25,5h-57l-15,11l-18,4H599l-20-4l-15-11l-35-34l-10-13l-4-18l5-20l11-15L550,252z"/>
     </clipPath>
+
+
     <clipPath id="nair12">
   <path fill-rule="evenodd" clip-rule="evenodd" fill="none" d="M505,336l20-6h13l10-9l26-9l265-1l11,4h92l20,8l16,17l9,19v21l-11,19
   	l-18,15l-39,16l-25,1h-19l-6,5l-19,11l-21,9l-214,3l-30-2l-17-8l-16,1l-22-2l-17-10l-16-11l-14-15l-8-21l2-23l11-18L505,336z"/>
     </clipPath>
+
+
     <clipPath id="upair13">
   <path fill-rule="evenodd" clip-rule="evenodd" fill="none" d="M477,291l-1-19l7-18l13-14l16-9h8l-7-5l-10-20l-1-25l9-20l17-17l22-10
   	l24-1l257-1l27,5l15,10l51,49l12,15l7,24l-6,21l-14,20l-21,14l-23,5l-23-1l1,7l-5,17l-9,12l-19,14l-23,4l-242-1l-18-6l-38-20l-15-12
   	L477,291z"/>
     </clipPath>
+
+
     <clipPath id="nair13">
   <path fill-rule="evenodd" clip-rule="evenodd" fill="none" d="M470,343l17-15l20-7l17-1l19-12l32-5h259l29,3l4,3l81-1l24,6l19,12
   	l12,19l3,21l-5,21l-13,16l-21,12l-39,8h-35l-21,13l-38,13l-251,1l-28-8l-15-5h-20l-20-8l-16-10l-14-13l-9-19l-1-23L470,343z"/>
     </clipPath>
+
+
     <clipPath id="upair14">
   <path fill-rule="evenodd" clip-rule="evenodd" fill="none" d="M436,127l22-9h307l22,1l61,15l21,9l15,15l8,22v26l-12,20l-19,16l-21,7
   	h-3l4,6l6,15l-1,18l-9,19l-20,15l-19,5H536l-21-1l-52-13l-11-5l-14-15l-6-16v-21l9-18l10-8l-13-4l-18-16l-11-21v-25l10-21L436,127z"
   	/>
     </clipPath>
+
+
     <clipPath id="nair14">
   <path fill-rule="evenodd" clip-rule="evenodd" fill="none" d="M452,340l16-16l19-10l14-3h12l3-2l29-9h316l26,6l5,3h71l22,5l19,11
   	l14,19l4,21l-3,20l-16,21l-18,11l-26,4h-54l-3,3l-27,13l-38,7H579l-46-6l-18-9l-25-6l-15-8l-17-12l-11-19l-2-24L452,340z"/>
     </clipPath>
-    <clipPath id="upb14-1">
+    <clipPath id="upb14">
       <path fill-rule="evenodd" clip-rule="evenodd" fill="none" d="M391,453l18-5h52l20,4l19,12l3,5h56l13,2l13,8l7,11l3,13l-3,13l-8,10
   	l-9,8l-15,4h-58l-4,7l-19,10l-15,3l-62,1l-14-4l-17-11l-12-17l-6-24l5-21l11-17L391,453z"/>
-    </clipPath>
-    <clipPath id="upb14-2">
-      <path fill-rule="evenodd" clip-rule="evenodd" fill="none" d="M686,488l8-10l12-7l14-3h55l2-3l20-13l21-4l52,1l20,3l18,11l14,20
-      l4,19l-4,23l-13,17l-18,12l-26,5l-49-1l-17-3l-22-13l-2-3l-58-1l-14-3l-13-10l-7-15l-1-12L686,488z"/>
+    <path fill-rule="evenodd" clip-rule="evenodd" fill="none" d="M686,488l8-10l12-7l14-3h55l2-3l20-13l21-4l52,1l20,3l18,11l14,20
+    l4,19l-4,23l-13,17l-18,12l-26,5l-49-1l-17-3l-22-13l-2-3l-58-1l-14-3l-13-10l-7-15l-1-12L686,488z"/>
     </clipPath>
     <clipPath id="bair14">
   <path fill-rule="evenodd" clip-rule="evenodd" fill="none" d="M295,337l20-3l12-17l20-11l25-6h7l7-8l17-10l18-3h296l21,4l16,11
@@ -259,9 +248,36 @@
   	l20-18l23-7l11-2h7l8-5l21-7l12-3l449-1l17,2l17,3l17,8l14,10l9,16v19l-4,13l5,25l-7,21l-13,15l-15,8l-4,7l-15,17l-22,11l-10,3
   	l-10,12l-24,12l-24,3H245L219,469z"/>
   </clipPath>
+  <rect class="a7 f20 hitbox" id="a7f20" width="1280" height="720" clip-path="url(#dair20)"></rect>
+  <rect class="a6 f20 hitbox" id="a6f20" width="1280" height="720" clip-path="url(#knee20)"></rect>
+  <rect class="a4 f20 hitbox" id="a4f20" width="1280" height="720" clip-path="url(#bair20)"></rect>
+  <rect class="a4 f19 hitbox" id="a4f19" width="1280" height="720" clip-path="url(#bair19)"></rect>
+  <rect class="a6 f18 hitbox" id="a6f18" width="1280" height="720" clip-path="url(#knee18)"></rect>
+  <rect class="a4 f18 hitbox" id="a4f18" width="1280" height="720" clip-path="url(#bair18)"></rect>
+  <rect class="a4 f17 hitbox" id="a4f17" width="1280" height="720" clip-path="url(#bair17)"></rect>
+  <rect class="a2 f17 hitbox" id="a2f17" width="1280" height="720" clip-path="url(#upair17)"></rect>
+  <rect class="a4 f16 hitbox" id="a4f16" width="1280" height="720" clip-path="url(#bair16)"></rect>
+  <rect class="a3 f16 hitbox" id="a3f16" width="1280" height="720" clip-path="url(#nair16)"></rect>
+  <rect class="a2 f16 hitbox" id="a2f16" width="1280" height="720" clip-path="url(#upair16)"></rect>
+  <rect class="a3 f15 hitbox" id="a3f15" width="1280" height="720" clip-path="url(#nair15)"></rect>
+  <rect class="a2 f15 hitbox" id="a2f15" width="1280" height="720" clip-path="url(#upair15)"></rect>
+  <rect class="a5 f14 hitbox" id="a5f14" width="1280" height="720" clip-path="url(#upb14)"></rect>
+  <rect class="a4 f14 hitbox" id="a4f14" width="1280" height="720" clip-path="url(#bair14)"></rect>
+  <rect class="a3 f14 hitbox" id="a3f14" width="1280" height="720" clip-path="url(#nair14)"></rect>
+  <rect class="a2 f14 hitbox" id="a2f14" width="1280" height="720" clip-path="url(#upair14)"></rect>
+  <rect class="a3 f13 hitbox" id="a3f13" width="1280" height="720" clip-path="url(#nair13)"></rect>
+  <rect class="a2 f13 hitbox" id="a2f13" width="1280" height="720" clip-path="url(#upair13)"></rect>
+  <rect class="a3 f12 hitbox" id="a3f12" width="1280" height="720" clip-path="url(#nair12)"></rect>
+  <rect class="a2 f12 hitbox" id="a2f12" width="1280" height="720" clip-path="url(#upair12)"></rect>
+  <rect class="a3 f11 hitbox" id="a3f11" width="1280" height="720" clip-path="url(#nair11)"></rect>
+  <rect class="a2 f11 hitbox" id="a2f11" width="1280" height="720" clip-path="url(#upair11)"></rect>
+  <rect class="a2 f10 hitbox" id="a2f10" width="1280" height="720" clip-path="url(#upair10)"></rect>
+  <rect class="a1 f7 hitbox" id="a1f7" width="1280" height="720" clip-path="url(#grab7)"></rect>
 
-		<img id="shield" src="assets/heatmaps/falcon/shield.png"/>
-		<div id="hurtboxcontainer"><img id="hurtbox" src="assets/heatmaps/hurtboxes/falconstand.png" style="margin-left:75%"/></div>
+</svg>
+
+		<img id="shield" src="../../assets/heatmaps/falcon/shield.png"/>
+		<div id="hurtboxcontainer"><img id="hurtbox" src="../../assets/heatmaps/hurtboxes/falconstand.png" style="margin-left:75%"/></div>
 	</div>
     <div id="framecontainer">
 			<div id="frameselect">Frame control: <span id="fsid">ALL</span></div>
@@ -287,9 +303,9 @@
   features to create next?
   Send a message via</p></div>
 <a href="http://www.reddit.com/message/compose/?to=schmooblidon">
-<div class="sugbtn"><img src="assets/redditicon.png" width="50" height="40" alt=""/><p>Reddit</p></div></a>
+<div class="sugbtn"><img src="../../assets/redditicon.png" width="50" height="40" alt=""/><p>Reddit</p></div></a>
 <a href="http://www.twitch.tv/message/compose?to=schmooblidon">
-<div class="sugbtn"><img src="assets/twitchicon.png" width="50" height="40" alt=""/><p>Twitch</p></div></a>
+<div class="sugbtn"><img src="../../assets/twitchicon.png" width="50" height="40" alt=""/><p>Twitch</p></div></a>
 </div>
 </div>
 
