--- a/heatmaps/oos/falcon3.html
+++ b/heatmaps/oos/falcon3.html
@@ -238,17 +238,15 @@
   <path fill-rule="evenodd" clip-rule="evenodd" fill="none" d="M405,344l-2-4v-19l8-15l15-12l19-9l19-1l8-3l27-2h434l24,3l25,7l23,12
   	l16,17l9,23l-1,25l-4,8l6,11l-2,24l-17,26l-21,15l-28,7H474l-26-9l-18-14l-16-24l-2-14l-8-13l-1-23L405,344z"/>
     </clipPath>
-    <clipPath id="dair20">
-  <path fill-rule="evenodd" clip-rule="evenodd" fill="none" d="M300,455l5-7l4-18l-5-18l7-30l15-22l7-4l-5-21l7-27l14-19l25-16l33-5
-  	h471l29,4l25,17l14,19l6,28l-4,22l5,21l-6,24l-7,10l-4,19l6,24l8,30l-5,22l5,18l-9,38l-18,26l-31,18l-33,5H381l-29-4l-31-19l-20-26
-  	l-8-36l5-21l-5-20L300,455z"/>
-    </clipPath>
+
+
+
     <clipPath id="bair20">
   <path fill-rule="evenodd" clip-rule="evenodd" fill="none" d="M219,469l-26-14l-15-19l-5-23v-10l5-15l-5-11l3-24l12-21l20-16l25-6
   	l20-18l23-7l11-2h7l8-5l21-7l12-3l449-1l17,2l17,3l17,8l14,10l9,16v19l-4,13l5,25l-7,21l-13,15l-15,8l-4,7l-15,17l-22,11l-10,3
   	l-10,12l-24,12l-24,3H245L219,469z"/>
   </clipPath>
-  <rect class="a7 f20 hitbox" id="a7f20" width="1280" height="720" clip-path="url(#dair20)"></rect>
+  <!--<rect class="a7 f20 hitbox" id="a7f20" width="1280" height="720" clip-path="url(#dair20)"></rect>-->
   <rect class="a6 f20 hitbox" id="a6f20" width="1280" height="720" clip-path="url(#knee20)"></rect>
   <rect class="a4 f20 hitbox" id="a4f20" width="1280" height="720" clip-path="url(#bair20)"></rect>
   <rect class="a4 f19 hitbox" id="a4f19" width="1280" height="720" clip-path="url(#bair19)"></rect>
@@ -272,7 +270,10 @@
   <rect class="a3 f11 hitbox" id="a3f11" width="1280" height="720" clip-path="url(#nair11)"></rect>
   <rect class="a2 f11 hitbox" id="a2f11" width="1280" height="720" clip-path="url(#upair11)"></rect>
   <rect class="a2 f10 hitbox" id="a2f10" width="1280" height="720" clip-path="url(#upair10)"></rect>
-  <rect class="a1 f7 hitbox" id="a1f7" width="1280" height="720" clip-path="url(#grab7)"></rect>
+  <!--<rect class="a1 f7 hitbox" id="a1f7" width="1280" height="720" clip-path="url(#grab7)"></rect>-->
+  <path id="testing" fill-rule="evenodd" clip-rule="evenodd" fill="purple" d="M300,455l5-7l4-18l-5-18l7-30l15-22l7-4l-5-21l7-27l14-19l25-16l33-5
+    h471l29,4l25,17l14,19l6,28l-4,22l5,21l-6,24l-7,10l-4,19l6,24l8,30l-5,22l5,18l-9,38l-18,26l-31,18l-33,5H381l-29-4l-31-19l-20-26
+    l-8-36l5-21l-5-20L300,455z"/>
 
 </svg>
 
