--- a/heatmaps/oos/falcon4.html
+++ b/heatmaps/oos/falcon4.html
@@ -85,11 +85,8 @@
   						</div></div>
   						<div id="position" class="hurtboxcontrols noa control">crouch</div><div id="flip" class="hurtboxcontrols noa control"><p>flip</p></div>
   					<div id="hbleft" class="hurtboxcontrols noa control"></div><div id="hbright" class="hurtboxcontrols noa control"></div></div>
-  				<a href="http://imgur.com/a/9SqqU"><div id="img-button" class="noa control"><p>
-  Image Version</p></div></a>
-  				<div id="hbhlbutton" class="noa control"><p>
-  Turn highlight <span id="hbhlonoff">Off</span></p></div>
-
+  				<!--<a href="http://imgur.com/a/9SqqU"><div id="img-button" class="noa control"><p>
+  Image Version</p></div></a>-->
   		<div id="control-speed">
   		<div id="play-button" class="noa control play"></div>
 
