--- a/heatmaps/oos/falcon4.html
+++ b/heatmaps/oos/falcon4.html
@@ -17,6 +17,7 @@
 
 </script>
 <script src="jquery-1.11.3.min.js" type="text/javascript"></script>
+<script src="jquery-ui.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="hresize.js"></script>
 <script type="text/javascript" src="script.js"></script>
 <script type="text/javascript" src="heatmapscript2.js"></script>
@@ -72,19 +73,8 @@
   		<div id="attack5" class="attack control"><p>Up-b</p><div class="framecircle" id="fc5"><p>F</p></div></div>
           <div id="attack6" class="attack control"><p>Knee</p><div class="framecircle" id="fc6"><p>F</p></div></div>
           <div id="attack7" class="attack control"><p>Dair</p><div class="framecircle" id="fc7"><p>F</p></div></div>
-  				<div id="hurtboxcontrol">Hurtbox control
-  					<div id="hurtchar" class="noa control hurtboxchar nohelp"><p id="hurtcurrent">Falcon</p><div id="hurtchardropdown">
-  						<div class="noa control hurtboxchar hbcharselect nohelp"><p>Fox</p></div>
-  						<div class="noa control hurtboxchar hbcharselect nohelp"><p>Falco</p></div>
-  						<div class="noa control hurtboxchar hbcharselect nohelp"><p>Marth</p></div>
-  						<div class="noa control hurtboxchar hbcharselect nohelp"><p>Sheik</p></div>
-  						<div class="noa control hurtboxchar hbcharselect nohelp"><p>Puff</p></div>
-  						<div class="noa control hurtboxchar hbcharselect nohelp"><p>Peach</p></div>
-  						<div class="noa control hurtboxchar hbcharselect nohelp"><p>ICs</p></div>
-  						<div class="noa control hurtboxchar hbcharselect nohelp"><p>Falcon</p></div>
-  						</div></div>
-  						<div id="position" class="hurtboxcontrols noa control">crouch</div><div id="flip" class="hurtboxcontrols noa control"><p>flip</p></div>
-  					<div id="hbleft" class="hurtboxcontrols noa control"></div><div id="hbright" class="hurtboxcontrols noa control"></div></div>
+
+
   				<!--<a href="http://imgur.com/a/9SqqU"><div id="img-button" class="noa control"><p>
   Image Version</p></div></a>-->
   		<div id="control-speed">
@@ -177,7 +167,8 @@ l-9,8l-15,4h-58l-4,7l-19,10l-15,3l-62,1l-14-4l-17-11l-12-17l-6-24l5-21l11-17L391
 
 <img id="shield" src="assets/heatmaps/falcon/shield.png"/>
 <div id="hurtboxcontainer">
-  <img id="hurtbox" src="assets/heatmaps/hurtboxes/falconstand.png" style="margin-left:75%"/></div>
+  <img id="hurtbox" src="assets/heatmaps/hurtboxes/falconstand.png"/></div>
+
 
 <svg version="1.1" id="hitboxsvg-t" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="1280px" height="720px"
 viewBox="0 0 1280 720" enable-background="new 0 0 1280 720" xml:space="preserve" style="position:absolute;z-index:200">
@@ -247,7 +238,21 @@ l-22,14l-24,5H727l-29-7l-19-10l-15-20h-42l-16-4l-18-9l-11-16l-6-20l4-19l12-16L60
 l-17,11l-20,3l-21-3l-11-8l-13,8l-19,4l-18-4l-20-12l-11-16l-6-18l6-23l12-14l15-9L670,434z" style="fill:transparent"/>
 
 </svg>
-	</div>
+  <div id="imgurbox" class="imgurhighlight"><a href="http://imgur.com/a/9SqqU"><img id="imgur" src="assets/heatmaps/imgurlogo.png"/></a></div>
+  <div id="hurtcontrolbox"><!--<div id="hbleft" class="hbdirection hbcon"></div>--><div id="hurtboxmidcontrols"><div id="hurtchar" class="hbcon"><span id="hurtcurrent">Falcon</span><div id="hurtchardropdown" style="display:none">
+    <div class="hbcharselect hbcon"><p>Fox</p></div>
+    <div class="hbcharselect hbcon"><p>Falco</p></div>
+    <div class="hbcharselect hbcon"><p>Marth</p></div>
+    <div class="hbcharselect hbcon"><p>Sheik</p></div>
+    <div class="hbcharselect hbcon"><p>Puff</p></div>
+    <div class="hbcharselect hbcon"><p>Peach</p></div>
+    <div class="hbcharselect hbcon"><p>ICs</p></div>
+    <div class="hbcharselect hbcon"><p>Falcon</p></div>
+  </div></div><div id="position" class="hbcon">crouch</div><div id="flip" class="hbcon">flip</div></div><!--<div id="hbright" class="hbdirection hbcon"></div>--></div>
+  <div id="draghurtcontainer"><div id="draghurt" class="hbcon"></div></div>
+  </div>
+
+
     <div id="framecontainer">
 			<div id="frameselect">Frame control: <span id="fsid">ALL</span></div>
             <div id="frameall">All<div id="fallon" class="allf"><div>On</div></div><div id="falloff" class="allf"><div>Off</div></div></div><div id="frame1" class="framecontrol"><p>1</p></div><div id="frame2" class="framecontrol"><p>2
