--- a/heatmaps/oos/falcon4.html
+++ b/heatmaps/oos/falcon4.html
@@ -18,7 +18,7 @@
 </script>
 <script src="jquery-1.11.3.min.js" type="text/javascript"></script>
 <script src="jquery-ui.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="hresize.js"></script>
+<script type="text/javascript" src="hresize2.js"></script>
 <script type="text/javascript" src="script.js"></script>
 <script type="text/javascript" src="heatmapscript2.js"></script>
 <link rel="shortcut icon" href="favicon.ico" />
