--- a/heatmaps/oos/falcon4.html
+++ b/heatmaps/oos/falcon4.html
@@ -20,6 +20,7 @@
 <script src="jquery-ui.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="hresize2.js"></script>
 <script type="text/javascript" src="script.js"></script>
+<script>listofattacks = ["Grab","Upair","Nair","Bair","Up-b","Knee","Dair"];</script>
 <script type="text/javascript" src="heatmapscript2.js"></script>
 <link rel="shortcut icon" href="favicon.ico" />
 <title>I KneeData | For your frame data kneeds</title>
