--- a/heatmaps/oos/falconbeta.html
+++ b/heatmaps/oos/falconbeta.html
@@ -20,7 +20,7 @@
 <script src="jquery-ui.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="hresize2.js"></script>
 <script type="text/javascript" src="script.js"></script>
-<script>listofattacks = ["Grab","Upair","Nair","Bair","Up-b","Knee","Dair"];</script>
+<script type="text/javascript" src="hmdata.js"></script>
 <script type="text/javascript" src="heatmapscript2.js"></script>
 <link rel="shortcut icon" href="favicon.ico" />
 <title>I KneeData | For your frame data kneeds</title>
@@ -52,17 +52,16 @@
       <div id="top-controls">
       	<div class="noa control nohelp" id="heatmaptype"><p>OoS</p>
           <div id="hmtypedropdown" class="dropdown" style="display:none"><div class="noa control hmtype nohelp">Coming Soon</div></div></div>
-  		<div class="noa control nohelp" id="characterbutton"><p>
-  Falcon</p>
+  		<div class="noa control nohelp" id="characterbutton"><p>Falcon</p>
   <div id="chardropdown" class="dropdown" style="display:none">
-  	<a href="heatmaps/oos/fox.html"><div class="noa control character nohelp"><p>Fox</p></div></a>
-  	<a href="heatmaps/oos/falco.html"><div class="noa control character nohelp"><p>Falco</p></div></a>
-  	<a href="heatmaps/oos/marth.html"><div class="noa control character nohelp"><p>Marth</p></div></a>
-  	<a href="heatmaps/oos/sheik.html"><div class="noa control character nohelp"><p>Sheik</p></div></a>
-  	<a href="heatmaps/oos/puff.html"><div class="noa control character nohelp"><p>Puff</p></div></a>
-  	<a href="heatmaps/oos/peach.html"><div class="noa control character nohelp"><p>Peach</p></div></a>
-  	<a href="heatmaps/oos/ics.html"><div class="noa control character nohelp"><p>ICs</p></div></a>
-  	<a href="heatmaps/oos/falcon.html"><div class="noa control character nohelp"><p>Falcon</p></div></a>
+  	<a href="heatmaps/oos/foxbeta.html"><div class="noa control character nohelp"><p>Fox</p></div></a>
+  	<a href="heatmaps/oos/falcobeta.html"><div class="noa control character nohelp"><p>Falco</p></div></a>
+  	<a href="heatmaps/oos/marthbeta.html"><div class="noa control character nohelp"><p>Marth</p></div></a>
+  	<a href="heatmaps/oos/sheikbeta.html"><div class="noa control character nohelp"><p>Sheik</p></div></a>
+  	<a href="heatmaps/oos/puffbeta.html"><div class="noa control character nohelp"><p>Puff</p></div></a>
+  	<a href="heatmaps/oos/peachbeta.html"><div class="noa control character nohelp"><p>Peach</p></div></a>
+  	<a href="heatmaps/oos/icsbeta.html"><div class="noa control character nohelp"><p>ICs</p></div></a>
+  	<a href="heatmaps/oos/falconbeta.html"><div class="noa control character nohelp"><p>Falcon</p></div></a>
   </div>
 
   </div>
@@ -165,7 +164,7 @@ l-9,8l-15,4h-58l-4,7l-19,10l-15,3l-62,1l-14-4l-17-11l-12-17l-6-24l5-21l11-17L391
     	l-17,11l-20,3l-21-3l-11-8l-13,8l-19,4l-18-4l-20-12l-11-16l-6-18l6-23l12-14l15-9L670,434z"/>
 
 </svg>
-
+<div id="framenumbers"></div>
 <img id="shield" src="assets/heatmaps/falcon/shield.png"/>
 <div id="hurtboxcontainer">
   <img id="hurtbox" src="assets/heatmaps/hurtboxes/falconstand.png"/></div>
