--- a/heatmaps/oos/peach.html
+++ b/heatmaps/oos/peach.html
@@ -114,6 +114,7 @@ x1</p></div>
         <img id="go" src="assets/heatmaps/go.png"/>
 				<img class="a9 f20 hitbox" id="a9f20" src="assets/heatmaps/peach/dair20.png">
 				<img class="a6 f20 hitbox" id="a6f20" src="assets/heatmaps/peach/upsmash20.png">
+        <img class="a5 f20 hitbox" id="a5f20" src="assets/heatmaps/peach/dsmash20.png">
 				<img class="a3 f20 hitbox" id="a3f20" src="assets/heatmaps/peach/bair20.png">
 				<img class="a2 f20 hitbox" id="a2f20" src="assets/heatmaps/peach/nair20.png">
 				<img class="a9 f19 hitbox" id="a9f19" src="assets/heatmaps/peach/dair19.png">
