--- a/heatmaps/oos/puff.html
+++ b/heatmaps/oos/puff.html
@@ -151,6 +151,7 @@ x1</p></div>
 				<img class="a5 f12 hitbox" id="a5f12" src="assets/heatmaps/puff/nair12.png"/>
 				<img class="a5 f11 hitbox" id="a5f11" src="assets/heatmaps/puff/nair11.png"/>
 				<img class="a4 f11 hitbox" id="a4f11" src="assets/heatmaps/puff/dair11.png"/>
+        <img class="a3 f11 hitbox" id="a3f11" src="assets/heatmaps/puff/upsmash11.png"/>
 				<img class="a4 f10 hitbox" id="a4f10" src="assets/heatmaps/puff/dair10.png"/>
 				<img class="a3 f10 hitbox" id="a3f10" src="assets/heatmaps/puff/upsmash10.png"/>
 				<img class="a3 f9 hitbox" id="a3f9" src="assets/heatmaps/puff/upsmash9.png"/>
