--- a/heatmaps/oos/falcobeta.html
+++ b/heatmaps/oos/falcobeta.html
@@ -20,7 +20,7 @@
 <script src="jquery-ui.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="hresize2.js"></script>
 <script type="text/javascript" src="script.js"></script>
-<script>listofattacks = ["Shine","Grab","Upsmash","Bair","Nair","Dair","Fair","Upair"];</script>
+<script type="text/javascript" src="hmdata.js"></script>
 <script type="text/javascript" src="heatmapscript2.js"></script>
 <link rel="shortcut icon" href="favicon.ico" />
 <title>I KneeData | For your frame data kneeds</title>
@@ -53,17 +53,16 @@
     <div id="top-controls">
     	<div class="noa control nohelp" id="heatmaptype"><p>OoS</p>
         <div id="hmtypedropdown" class="dropdown" style="display:none"><div class="noa control hmtype nohelp">Coming Soon</div></div></div>
-		<div class="noa control nohelp" id="characterbutton"><p>
-Falco</p>
+		<div class="noa control nohelp" id="characterbutton"><p>Falco</p>
 <div id="chardropdown" class="dropdown" style="display:none">
-	<a href="heatmaps/oos/fox.html"><div class="noa control character nohelp"><p>Fox</p></div></a>
-	<a href="heatmaps/oos/falco.html"><div class="noa control character nohelp"><p>Falco</p></div></a>
-	<a href="heatmaps/oos/marth.html"><div class="noa control character nohelp"><p>Marth</p></div></a>
-	<a href="heatmaps/oos/sheik.html"><div class="noa control character nohelp"><p>Sheik</p></div></a>
-	<a href="heatmaps/oos/puff.html"><div class="noa control character nohelp"><p>Puff</p></div></a>
-	<a href="heatmaps/oos/peach.html"><div class="noa control character nohelp"><p>Peach</p></div></a>
-	<a href="heatmaps/oos/ics.html"><div class="noa control character nohelp"><p>ICs</p></div></a>
-	<a href="heatmaps/oos/falcon.html"><div class="noa control character nohelp"><p>Falcon</p></div></a>
+	<a href="heatmaps/oos/foxbeta.html"><div class="noa control character nohelp"><p>Fox</p></div></a>
+	<a href="heatmaps/oos/falcobeta.html"><div class="noa control character nohelp"><p>Falco</p></div></a>
+	<a href="heatmaps/oos/marthbeta.html"><div class="noa control character nohelp"><p>Marth</p></div></a>
+	<a href="heatmaps/oos/sheikbeta.html"><div class="noa control character nohelp"><p>Sheik</p></div></a>
+	<a href="heatmaps/oos/puffbeta.html"><div class="noa control character nohelp"><p>Puff</p></div></a>
+	<a href="heatmaps/oos/peachbeta.html"><div class="noa control character nohelp"><p>Peach</p></div></a>
+	<a href="heatmaps/oos/icsbeta.html"><div class="noa control character nohelp"><p>ICs</p></div></a>
+	<a href="heatmaps/oos/falconbeta.html"><div class="noa control character nohelp"><p>Falcon</p></div></a>
 </div>
 
 </div>
@@ -226,7 +225,7 @@ x1</p></div>
          <path fill-rule="evenodd" clip-rule="evenodd" d="M557,499l6-30l19-24l27-17l29-6l34,7l25,15l19,24l8,30l-9,32l-19,26
          	l-24,17l-34,5l-31-7l-22-14l-22-28L557,499z" class="a1 f6 hitbox" id="a1f6"></path>
     </svg>
-
+    <div id="framenumbers"></div>
 		<img id="shield" src="assets/heatmaps/falco/shield.png"/>
 		<div id="hurtboxcontainer"><img id="hurtbox" src="assets/heatmaps/hurtboxes/falconstand.png"/></div>
     <svg version="1.1" id="hitboxsvg-t" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="1280px" height="720px"
