--- a/heatmaps/oos/marthbeta.html
+++ b/heatmaps/oos/marthbeta.html
@@ -20,9 +20,7 @@
 <script src="jquery-ui.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="hresize2.js"></script>
 <script type="text/javascript" src="script.js"></script>
-<script>listofattacks = ["Upb","Grab","Fair","Dair","Upair","Nair","Bair","Sideb","Upsmash","Downb"];
-attdetails = ["<br>+1 Frame Jumpsquat<br>Total: 39<br>Hit: 5-10<br>Invulnerable: 5<br>Landfallspeciallag: 34","<br>+1 Frame Jumpsquat<br>Total: 30<br>Grab: 7-8","<br>+4 Frames Jumpsquat<br>Total: 33<br>Hit: 4-7<br>IASA: 30<br>Auto cancel: 27><br>Landlag: 15<br>Lcanceled: 7","<br>+4 Frames Jumpsquat<br>Total: 59<br>Hit: 6-9<br>Auto cancel: <5 48><br>Landlag: 32<br>Lcanceled: 16","<br>+4 Frames Jumpsquat<br>Total: 45<br>Hit: 5-8<br>Auto cancel: <4 27><br>Landlag: 15<br>Lcanceled: 7","<br>+4 Frames Jumpsquat<br>Total: 49<br>Hit: 6-7, 15-21<br>Auto cancel: <5 25><br>Landlag: 15<br>Lcanceled: 7","<br>+4 Frames Jumpsquat<br>Total: 39<br>Hit: 7-11<br>IASA: 35<br>Auto cancel: 32><br>Landlag: 24<br>Lcanceled: 12","<br>+4 Frames Jumpsquat<br>Total: 29<br>Hit: 6-8<br>Window for attack 2: 9-26","<br>1 Frame Jumpsquat<br>Total: 54<br>Hit: 13-16<br>Charge frame: 7<br>IASA: 46","<br>+4 Frames Jumpsquat<br>Total: 59<br>Counters: 5-29"];
-specials = [["a1f6","Intangible","intangible"],["a10f9","Counterattack Area","counterattack"]];</script>
+<script type="text/javascript" src="hmdata.js"></script>
 <script type="text/javascript" src="heatmapscript2.js"></script>
 <link rel="shortcut icon" href="favicon.ico" />
 <title>I KneeData | For your frame data kneeds</title>
@@ -55,17 +53,16 @@ specials = [["a1f6","Intangible","intangible"],["a10f9","Counterattack Area","co
     <div id="top-controls">
     	<div class="noa control nohelp" id="heatmaptype"><p>OoS</p>
         <div id="hmtypedropdown" class="dropdown" style="display:none"><div class="noa control hmtype nohelp">Coming Soon</div></div></div>
-		<div class="noa control nohelp" id="characterbutton"><p>
-Marth</p>
+		<div class="noa control nohelp" id="characterbutton"><p>Marth</p>
 <div id="chardropdown" class="dropdown" style="display:none">
-	<a href="heatmaps/oos/fox.html"><div class="noa control character nohelp"><p>Fox</p></div></a>
-	<a href="heatmaps/oos/falco.html"><div class="noa control character nohelp"><p>Falco</p></div></a>
-	<a href="heatmaps/oos/marth.html"><div class="noa control character nohelp"><p>Marth</p></div></a>
-	<a href="heatmaps/oos/sheik.html"><div class="noa control character nohelp"><p>Sheik</p></div></a>
-	<a href="heatmaps/oos/puff.html"><div class="noa control character nohelp"><p>Puff</p></div></a>
-	<a href="heatmaps/oos/peach.html"><div class="noa control character nohelp"><p>Peach</p></div></a>
-	<a href="heatmaps/oos/ics.html"><div class="noa control character nohelp"><p>ICs</p></div></a>
-	<a href="heatmaps/oos/falcon.html"><div class="noa control character nohelp"><p>Falcon</p></div></a>
+	<a href="heatmaps/oos/foxbeta.html"><div class="noa control character nohelp"><p>Fox</p></div></a>
+	<a href="heatmaps/oos/falcobeta.html"><div class="noa control character nohelp"><p>Falco</p></div></a>
+	<a href="heatmaps/oos/marthbeta.html"><div class="noa control character nohelp"><p>Marth</p></div></a>
+	<a href="heatmaps/oos/sheikbeta.html"><div class="noa control character nohelp"><p>Sheik</p></div></a>
+	<a href="heatmaps/oos/puffbeta.html"><div class="noa control character nohelp"><p>Puff</p></div></a>
+	<a href="heatmaps/oos/peachbeta.html"><div class="noa control character nohelp"><p>Peach</p></div></a>
+	<a href="heatmaps/oos/icsbeta.html"><div class="noa control character nohelp"><p>ICs</p></div></a>
+	<a href="heatmaps/oos/falconbeta.html"><div class="noa control character nohelp"><p>Falcon</p></div></a>
 </div>
 
 </div>
@@ -211,7 +208,7 @@ x1</p></div>
   	l18,11l10,14l19,4l18,12l9,14l5,18l-3,19l-13,18l-18,12l-19,2l-18-3l-19-11l-11-15h-7l-20-10l-14-12l-3-4l-7,14l-9,13l-21,8h-17
   	l-15-4l-14-10l-12-13l-8-16V517z" class="a1 f6 hitbox" id="a1f6"></path>
     </svg>
-
+    <div id="framenumbers"></div>
 		<img id="shield" src="assets/heatmaps/marth/shield.png"/>
 		<div id="hurtboxcontainer"><img id="hurtbox" src="assets/heatmaps/hurtboxes/falconstand.png"/></div>
     <svg version="1.1" id="hitboxsvg-t" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="1280px" height="720px"
