--- a/heatmaps/oos/doc.html
+++ b/heatmaps/oos/doc.html
@@ -392,7 +392,7 @@ x1</p></div>
     <div class="hbcharselect hbcon"><p>Luigi</p></div>
     <div class="hbcharselect hbcon"><p>Mario</p></div>
   </div></div><div id="position" class="hbcon">crouch</div><div id="flip" class="hbcon">flip</div></div><!--<div id="hbright" class="hbdirection hbcon"></div>--></div>
-  <div id="draghurtcontainer"><div id="draghurt" class="hbcon"></div></div>
+  <div id="draghurtcontainer"><div id="hurttap" class="hbcon"><div id="hurtleft" class="hbcon"></div><div id="hurtright" class="hbcon"></div></div></div>
 
 	</div>
     <div id="framecontainer">
