--- a/heatmaps/oos/puff.html
+++ b/heatmaps/oos/puff.html
@@ -44,7 +44,7 @@
 
 <div id="heatmapinfobox"><p>Heatmaps display the speed of all the character's attacks from a certain position. The coloured shapes represent the possible hitboxes of each attack, where the colour represents the frame that it comes out. All smash games run at 60 frames per second. Red and yellow hitboxes are very fast, but green and blue are slower.</p>
 	<p>You can toggle each attack, or each frame (colour) individually, to allow you to see only the options you want. You can also play an animation of your selected hitboxes in real game speed (60fps) to get a feel for how fast each option is.</p>
-	<p>Using the hurtbox controls, you can move around a custom opponent hurtbox to greater visualise hitbox range.</p>
+	<p>Using the hurtbox controls, you can move around a custom opponent hurtbox to greater visualise hitbox range. Tap just above the arrows on mobile to show controls.</p>
 	<p>Hovering over the buttons will highlight (outlines them) the button's respective hitboxes, and hovering over (tapping on mobile) each hitbox will display info.<a href="heatmaps/oos/foxold.html"><div id="oldbutton">Not working? Try the old build</div></a></p>
 </div>
 </div><div id="main">
@@ -327,7 +327,7 @@ x1</p></div>
     <div class="hbcharselect hbcon"><p>Luigi</p></div>
     <div class="hbcharselect hbcon"><p>Mario</p></div>
   </div></div><div id="position" class="hbcon">crouch</div><div id="flip" class="hbcon">flip</div></div><!--<div id="hbright" class="hbdirection hbcon"></div>--></div>
-  <div id="draghurtcontainer"><div id="draghurt" class="hbcon"></div></div>
+  <div id="draghurtcontainer"><div id="draghurt" class="hbcon notmobiledraghurt"></div></div>
 
 	</div>
     <div id="framecontainer">
