--- a/newheatmap.html
+++ b/newheatmap.html
@@ -43,8 +43,14 @@
 <svg id="position" height="1024px" width="1244px" style="position:absolute">
 </svg>
 <svg id="hitbox-invisible" height="1024px" width="1244px" style="position:absolute">
+	<defs>
+	<filter id="biggercopy">
+		<feMorphology operator="dilate" radius="3"/>
+	</filter>
+	</defs>
 </svg>
 
+</div><div id="right-controls"><div id="movecontrols"></div><div id="controls-container"><div id="interpolaterange"><div id="intrangebutton"><p>Interpolate Ranges</div><div id="intrangeswitch" class="intrangeon"><p>On</p></div></div></div>
 </div>
 </div></body>
 </html>
