--- a/framedata.html
+++ b/framedata.html
@@ -88,7 +88,7 @@
 <div id="vidcontrols"><div id="play" class="vcontrol play"></div><div id="fminus" class="vcontrol"></div><div id="fplus" class="vcontrol"></div><!--<div id="loop" class="vcontrol"></div>--><div id="speedminus" class="vcontrol"></div><div id="speedplus" class="vcontrol"><div class="speeddisabled"></div></div></div><!--<div id="keycontainer"><p id="time"></p> <p id="timecount"></p> <p id="funcall"></p> <p id="frames"></p> <p id="rframes"></p></div>-->
 <div id="vidandsvgcontainer"><div id="vidcontainer" style="position:absolute"><video id="mainvid" loop autobuffer preload style="display:inline-block">
 <source type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;" src="assets/vids/sheik/ftilt.mp4"></source>
-</video></div><div id="detailcanvas"><div id="autocanceldisplay" class="displayoff"><p>Autocancel</p></div><div id="iasadisplay" class="displayoff"><p>Interruptable</p></div></div><div id="svgcontainer" style="position:absolute">
+</video></div><div id="detailcanvas"><div id="framedisplay" class="nothitting"><p></p></div><div id="autocanceldisplay" class="displayoff"><p>Autocancel</p></div><div id="iasadisplay" class="displayoff"><p>Interruptable</p></div></div><div id="svgcontainer" style="position:absolute">
 		 <svg id="svgbox" height="512px" width="1244px" style="position:absolute"></svg>
 		 <svg id="svgbox-t" height="512px" width="1244px" style="position:absolute"></svg>
 	 </div>
