--- a/calculator.html
+++ b/calculator.html
@@ -23,7 +23,8 @@
 <script src="jquery-ui.min.js" type="text/javascript"></script>
 <script src="perfect-scrollbar.jquery.min.js"></script>
 <script type="text/javascript" src="script.js"></script>
-<script type="text/javascript" src="hitboxDB.js"></script>
+<script type="text/javascript" src="hitboxDBJSON.js"></script>
+<script type="text/javascript" src="hitboxStruct.js"></script>
 <script type="text/javascript" src="calculatorresize.js"></script>
 <script type="text/javascript" src="calculatormaths.js"></script>
 <script type="text/javascript" src="calculator.js"></script>
