--- a/calculatorsecretbeta.html
+++ b/calculatorsecretbeta.html
@@ -25,6 +25,7 @@
 <script type="text/javascript" src="script.js"></script>
 <script type="text/javascript" src="hitboxDBJSON.js"></script>
 <script type="text/javascript" src="hitboxStruct.js"></script>
+<script type="text/javascript" src="charAttributes.js"></script>
 <script type="text/javascript" src="throwData.js"></script>
 <script type="text/javascript" src="calculatorresize.js"></script>
 <script type="text/javascript" src="calculatormathsbeta.js"></script>
