asdi and amsah tech

--- a/apptest.html
+++ b/apptest.html
@@ -17,9 +17,11 @@
 <div id="main">
 <div id="taskMain" class="main">
   <div id="taskTitle" class="title"><p>Select Task</p></div>
-  <div id="crouchCancelTask" class="taskButton"><p>How long can I crouch cancel .... ?</p></div>
+  <div id="crouchCancelTask" class="taskButton"><p>How long can I Crouch Cancel .... ?</p></div>
+  <div id="asdiDownTask" class="taskButton"><p>How long can I ASDI down .... ?</p></div>
+  <div id="amsahTechTask" class="taskButton"><p>How long can I Amsah Tech .... ?</p></div>
   <div id="killTask" class="taskButton"><p>When will .... kill ?</p></div>
-  <div id="shieldstunTask" class="taskButton"><p>How much shield stun does .... have ?</p></div>
+  <div id="shieldstunTask" class="taskButton"><p>How much Shield Stun does .... have ?</p></div>
 </div>
 <div id="attackMain" class="main">
   <div id="attackTitle" class="title"><p>Select Attack</p></div>
