position selecting prototype

--- a/apptest.html
+++ b/apptest.html
@@ -100,6 +100,19 @@
 </div>
 <div id="optionsMain">
 </div>
+<div id="positionMain" class="main">
+  <div id="positionTitle" class="title"><p>Select Position</p></div>
+  <div id="DIresults"><div id="noDIresults" class="diresultcontainer"><div class="diresult"><p>No DI</p></div><div class="diresultpercent"><p><span id="nodiresultedit"></span>%</p></div></div><div class="diresultspacer"></div><div id="max1DIresults" class="diresultcontainer"><div  class="diresult"><p>Max DI 1</p></div><div class="diresultpercent"><p><span id="maxdi1resultedit"></span>%</p></div></div><div class="diresultspacer"></div><div id="max2DIresults" class="diresultcontainer"><div  class="diresult"><p>Max DI 2</p></div><div class="diresultpercent"><p><span id="maxdi2resultedit"></span>%</p></div></div></div>
+  <div id="hitdirection"><div id="hitDirectionTitle"><p>Hit Direction</p></div><div id="hitLeft" class="hitDirectionButton"></div><div id="hitRight" class="hitDirectionButton hitDirectionButtonOn"></div></div><div id="snaptosurfacesContainer"><div id="ststext"><p>Snap to Surfaces</p></div><div id="stsSwitchBar" class="switchBarOn"></div></div>
+  <div id="positionDisplay">
+    <img id="trajBackground" src="assets/trajectory/stages/bf.png"/>
+    <svg version="1.1" id="trajectory" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="2290px" height="1594px" viewBox="0 0 2290 1594" enable-background="new 0 0 2290 1594" xml:space="preserve" style="position:absolute"></svg>
+    <div id="trajCanvas"><div id="groundedBox"><p>Grounded</p></div><div id="mousePosition"><p>X: <span id="mPosX">0</span> Y: <span id="mPosY">0</span></p></div></div>
+    <svg version="1.1" id="trajectory-t" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="2290px" height="1594px" viewBox="0 0 2290 1594" enable-background="new 0 0 2290 1594" xml:space="preserve" style="position:absolute"></svg>
+  </div>
+  <div id="stageSelect"><div id="bf" class="stagebutton stageselected"></div><div id="fd" class="stagebutton"></div><div id="ys" class="stagebutton"></div><div id="dl" class="stagebutton"></div><div id="ps" class="stagebutton"></div><div id="fo" class="stagebutton"></div></div>
+  <div id="fullresultsButton"><p>Full Results</p></div>
+</div>
 <div id="resultsMain" class="main">
   <div id="resultsTitle" class="title"><p>Results</p></div>
   <div id="resultsContainer">
